labs/09/loop-build.log
loop-test.c:17:6: error: the call requires 'ifunc', which is not supported by this target
   17 | void foo(){
      |      ^~~
